--- a/src/app.css
+++ b/src/app.css
@@ -5,15 +5,111 @@
   :root {
     --text: #0a0705;
     --background: #f8f3f1;
-    --primary: #ff6600;
-    --secondary: #a1bdce;
-    --accent: #9686c1;
+    --primary: #22b9b9;
+    --secondary: #9a9a93;
+    --accent: #e76a04;
+
+
+    --background-50: #f6f0ee;
+    --background-100: #eee2dd;
+    --background-200: #ddc5bb;
+    --background-300: #cca899;
+    --background-400: #bb8a77;
+    --background-500: #aa6d55;
+    --background-600: #885744;
+    --background-700: #664233;
+    --background-800: #442c22;
+    --background-900: #221611;
+    --background-950: #110b09;
+
+    --primary-50: #e9fbfb;
+    --primary-100: #d4f7f7;
+    --primary-200: #a9efef;
+    --primary-300: #7ee7e7;
+    --primary-400: #53dfdf;
+    --primary-500: #28d7d7;
+    --primary-600: #20acac;
+    --primary-700: #188181;
+    --primary-800: #105656;
+    --primary-900: #082b2b;
+    --primary-950: #041616;
+
+    --secondary-50: #f3f3f2;
+    --secondary-100: #e6e6e5;
+    --secondary-200: #cececa;
+    --secondary-300: #b5b5b0;
+    --secondary-400: #9c9c96;
+    --secondary-500: #83837c;
+    --secondary-600: #696963;
+    --secondary-700: #4f4f4a;
+    --secondary-800: #353531;
+    --secondary-900: #1a1a19;
+    --secondary-950: #0d0d0c;
+
+    --accent-50: #fff1e6;
+    --accent-100: #fee3cd;
+    --accent-200: #fdc79b;
+    --accent-300: #fdab68;
+    --accent-400: #fc8f36;
+    --accent-500: #fb7304;
+    --accent-600: #c95c03;
+    --accent-700: #974502;
+    --accent-800: #642e02;
+    --accent-900: #321701;
+    --accent-950: #190c00;
+
   }
   .dark {
     --text: #faf7f5;
-    --background: #0e0907;
-    --primary: #ff6600;
-    --secondary: #314d5e;
-    --accent: #4f3e79;
+
+    --background-50: #110b09;
+    --background-100: #221611;
+    --background-200: #442c22;
+    --background-300: #664233;
+    --background-400: #885744;
+    --background-500: #aa6d55;
+    --background-600: #bb8a77;
+    --background-700: #cca899;
+    --background-800: #ddc5bb;
+    --background-900: #eee2dd;
+    --background-950: #f6f0ee;
+
+    --primary-50: #041616;
+    --primary-100: #082b2b;
+    --primary-200: #105656;
+    --primary-300: #188181;
+    --primary-400: #20acac;
+    --primary-500: #28d7d7;
+    --primary-600: #53dfdf;
+    --primary-700: #7ee7e7;
+    --primary-800: #a9efef;
+    --primary-900: #d4f7f7;
+    --primary-950: #e9fbfb;
+
+    --secondary-50: #0d0d0c;
+    --secondary-100: #1a1a19;
+    --secondary-200: #353531;
+    --secondary-300: #4f4f4a;
+    --secondary-400: #696963;
+    --secondary-500: #83837c;
+    --secondary-600: #9c9c96;
+    --secondary-700: #b5b5b0;
+    --secondary-800: #cececa;
+    --secondary-900: #e6e6e5;
+    --secondary-950: #f3f3f2;
+
+    --accent-50: #190c00;
+    --accent-100: #321701;
+    --accent-200: #642e02;
+    --accent-300: #974502;
+    --accent-400: #c95c03;
+    --accent-500: #fb7304;
+    --accent-600: #fc8f36;
+    --accent-700: #fdab68;
+    --accent-800: #fdc79b;
+    --accent-900: #fee3cd;
+    --accent-950: #fff1e6;
+
   }
 }
+
